Updated the blog post design

--- a/layouts/post.html
+++ b/layouts/post.html
@@ -299,7 +299,7 @@
   <link rel="mask-icon" sizes="any" href="/images/favicon.svg" color="#FF2400" />
 
   <body class="phl">
-    <header class="wrap site__header mbxl">
+    <header class="sans wrap site__header mbxl">
       <a class="site__title plainlink" href="" title="Highlight the text">Made ya look.</a>
 
       <nav class="site__nav">
