--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ html {
   font-size: 18px;
   hyphens: none;
 
-  font-family: "Untitled Sans Test";
+  font-family: "Untitled Sans";
 }
 
 .wrap {
@@ -127,6 +127,7 @@ figure {
   margin-bottom: 40px;
 }
 
+
 .phl {
   margin: 0 40px;
 }
@@ -150,6 +151,15 @@ p + h2 {
   margin-top: 40px;
 }
 
+p + blockquote {
+  margin-top: 40px;
+}
+
+blockquote {
+  border-left: 2px solid black;
+  padding-left: 20px;
+}
+
 figure + h2 {
   margin-top: 40px;
 }
@@ -163,6 +173,7 @@ p + p {
 }
 
 .pullout {
+  width: 700px;
   font-size: 30px;
   line-height: 45px;
 }
@@ -171,7 +182,7 @@ p + p {
   margin-top: 10px;
   font-size: 15px;
   line-height: 25px;
-  color: #7b7b7b;
+  color: #b4b4b4;
 }
 
 a {
@@ -182,7 +193,7 @@ a {
 }
 
 a:hover, a:focus {
-  color: #7b7b7b;
+  color: #b4b4b4;
 }
 
 .plainlink {
@@ -194,7 +205,7 @@ a:hover, a:focus {
 }
 
 .a1 {
-  color: #7b7b7b;
+  margin-top: 0px;
 }
 
 strong { 
@@ -226,6 +237,11 @@ strong {
   width: calc((100% / 2) - 10px);
   margin-bottom: 20px;
   display: block;
+  transition: .2s ease;
+}
+
+.grid__item:hover {
+  color: #b4b4b4;
 }
 
 .grid__link {
@@ -233,15 +249,26 @@ strong {
 }
 
 .grid__image {
-  outline: 2px solid rgba(123, 123, 123, 0);
-  outline-offset: -2px;
   transition: .2s ease;
 }
 
-.grid__item:hover .grid__image {
-  outline: 2px solid rgba(123, 123, 123, .5);
+.viewProject {
+  display: flex;
+  flex-flow: row nowrap;
 }
 
+#linkArrow {
+  height: 25px;
+  width: 25px;
+  fill: #b4b4b4;
+  stroke: #b4b4b4;
+  stroke-linejoin: round;
+  transition: .2s ease;
+}
+
+.grid__item:hover #linkArrow {
+  width: 40px;
+}
 
 
 /* Blog */
@@ -261,7 +288,7 @@ strong {
 }
 
 .list__description {
-  color: #7b7b7b;
+  color: #b4b4b4;
 }
 
 /* Post */
@@ -277,6 +304,10 @@ strong {
 
 figcaption.flex p {
   width: 50%;
+}
+
+figcaption p + p {
+  text-indent: 0px;
 }
 
 /* About */
@@ -307,6 +338,10 @@ figcaption.flex p {
   margin-bottom: 10px;
 }
 
+p + figure {
+  margin-top: 40px;
+}
+
 canvas {
   width: 700px;
   height: 700px;
@@ -319,4 +354,8 @@ canvas {
 
 #creationOfAdam canvas {
   flex-shrink: 0;
+}
+
+figure .middle {
+  margin: 0 10px;
 }
