--- a/css/style.css
+++ b/css/style.css
@@ -264,11 +264,11 @@ strong {
   width: calc((100% / 2) - 10px);
   margin-bottom: 20px;
   display: block;
-  transition: .2s ease;
+  transition: opacity .3s ease;
 }
 
-.grid__item:hover {
-  color: #b4b4b4;
+.grid__item:hover .grid__image {
+  opacity: 0.6;
 }
 
 .grid__link {
@@ -293,7 +293,11 @@ strong {
   transition: .2s ease;
 }
 
-.grid__item:hover #linkArrow {
+.grid__caption:hover {
+  color: black;
+}
+
+.viewProject:hover #linkArrow {
   width: 40px;
 }
 
@@ -382,4 +386,130 @@ canvas {
 
 #creationOfAdam canvas {
   flex-shrink: 0;
+}
+
+
+/* Animation */
+.animate1{
+  -webkit-animation-name: animate1;
+  -webkit-animation-duration: 0.5s;
+  -webkit-animation-timing-function: ease-in;
+}
+
+@-webkit-keyframes animate1{
+  0%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+
+.animate2{
+  -webkit-animation-name: animate2;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-timing-function: ease-in-out;
+}
+
+@-webkit-keyframes animate2{
+  0%{
+    opacity: 0;
+    -webkit-transform: translateY(20px)
+  }
+
+  50%{
+    opacity: 0;
+  }
+
+  100%{
+    opacity: 1;
+    -webkit-transform: translateY(0px)
+  }
+}
+
+.animate3{
+  -webkit-animation-name: animate3;
+  -webkit-animation-duration: 1.1s;
+  -webkit-animation-timing-function: ease-in-out;
+}
+
+@-webkit-keyframes animate3{
+  0%{
+    opacity: 0;
+    -webkit-transform: translateY(20px)
+  }
+
+  50%{
+    opacity: 0;
+  }
+
+  100%{
+    opacity: 1;
+    -webkit-transform: translateY(0px)
+  }
+}
+
+.animate4{
+  -webkit-animation-name: animate4;
+  -webkit-animation-duration: 1.05s;
+  -webkit-animation-timing-function: ease-in-out;
+}
+
+@-webkit-keyframes animate4{
+  0%{
+    opacity: 0;
+    -webkit-transform: translateY(20px)
+  }
+
+  50%{
+    opacity: 0;
+  }
+
+  100%{
+    opacity: 1;
+    -webkit-transform: translateY(0px)
+  }
+}
+
+.animate5{
+  -webkit-animation-name: animate5;
+  -webkit-animation-duration: 1.15s;
+  -webkit-animation-timing-function: ease-in-out;
+}
+
+@-webkit-keyframes animate5{
+  0%{
+    opacity: 0;
+    -webkit-transform: translateY(20px)
+  }
+
+  50%{
+    opacity: 0;
+  }
+
+  100%{
+    opacity: 1;
+    -webkit-transform: translateY(0px)
+  }
+}
+
+.animate{
+  -webkit-animation-name: animate3;
+  -webkit-animation-duration: 0.5s;
+  -webkit-animation-timing-function: ease-in;
+}
+
+@-webkit-keyframes animate{
+  0%{
+    opacity: 0;
+    -webkit-transform: translateY(-20px)
+  }
+
+  50%{
+  }
+
+  100%{
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
 }
